--- a/IPrincipal.form
+++ b/IPrincipal.form
@@ -67,6 +67,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nombre"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="colasNombreMouseClicked"/>
+              </Events>
             </Menu>
           </SubComponents>
         </Menu>
